--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
             <a>Placeholder</a>
         </div>
     </nav>
+    <section id="Start">
+        
+        <h2>Introduccion</h2>
+        <img src="Images/PhotoOfMe.jpg" alt="Foto no encontrada 404" id="MyPhoto">
+        <p>
+            Bienvenidos a mi pagina web donde me presento, soy Marcos Gorriaran un joven 
+            de 21 años y deseo participar en el mundo del desarollo de aplicaciones por la
+            gratificacion de hacer programas y algoritmos que sean utiles para otras personas
+            y os agradezco que os tomeis el tiempo de tan siquiera leer esta introduccion sobre mi.
+        </p>
+
+    </section>
 </body>
 
 </html>
