Modificacion en nav-bar
Estoy inentando modificar el nav list para que pueda lucir bien en la pagina del curriculum

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <nav>
         <div class="container-fluid">
-            <a class="navbar-brand">Placeholder</a>
+            <a class="navbar-brand">Marcos Gorriaran</a>
             <a>Placeholder</a>
             <a>Placeholder</a>
             <a>Placeholder</a>
