--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     </header>
     <nav>
         <div class="container-fluid">
-            <a class="navbar-brand">Marcos Gorriaran</a>
-            <a>Placeholder</a>
-            <a>Placeholder</a>
-            <a>Placeholder</a>
+            <div class="row">
+                <a class="navbar-brand col">Marcos Gorriaran</a>
+                <a class="col">Placeholder</a>
+                <a class="col">Placeholder</a>
+                <a class="col">Placeholder</a>
+            </div>     
         </div>
     </nav>
     <section id="Start">
@@ -38,6 +40,9 @@
             y os agradezco que os tomeis el tiempo de tan siquiera leer esta introduccion sobre mi.
         </p>
 
+    </section>
+    <section>
+        <h2>Experiencia laboral</h2>
     </section>
 </body>
 
