Progreso en el index
Algunos cambios hechos en el index para que al poner el mouse encima del listado de experiencias laborales, este cambie el fondo para indicar que el mouse esta encima.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="Style/Main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="Script/Main.js"></script>
 </head>
 
 <body>
@@ -72,7 +73,7 @@
         <ul class="list-group">
             <a data-bs-toggle="collapse" href="#Responsabilidades" role="button" aria-expanded="false"
                 aria-controls="collapseExample">
-                <li class="list-group-item">
+                <li class="list-group-item list-group-item-action">
                     Responsabilidades
                 </li>
             </a>
@@ -97,13 +98,13 @@
             </div>
             <a data-bs-toggle="collapse" href="#Responsabilidade" role="button" aria-expanded="false"
                 aria-controls="collapseExample">
-                <li class="list-group-item">
+                <li class="list-group-item list-group-item-action">
                     Responsabilidades
-
                 </li>
             </a>
         </ul>
         <script>
+            
         </script>
     </section>
 </body>
