--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="Style/Main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="Script/Main.js"></script>
+    <script src="Script/StickyNavbar.js"></script>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <div></div>
         <h1 class="align-middle">Bienvenidos a mi autopresentacion</h1>
     </header>
-    <nav class="sticky-top navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="navbar_top" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
