--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     <script src="Script/StickyNavbar.js"></script>
 </head>
 
-<body>
+<body class="justify-content-around">
     <header id="TopOfPage">
-        <div></div>
-        <h1 class="align-middle">Bienvenidos a mi autopresentacion</h1>
+        <img src="Images/PhoenixBackground.png" class="img-fluid mx-auto d-block" alt="">
     </header>
     <nav id="navbar_top" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -97,12 +96,29 @@
                     o en los ordenadores de la empresa.
                 </div>
             </div>
-            <a data-bs-toggle="collapse" href="#Responsabilidade" role="button" aria-expanded="false"
+            <a data-bs-toggle="collapse" href="#Lugar" role="button" aria-expanded="false"
                 aria-controls="collapseExample">
                 <li class="list-group-item list-group-item-action">
-                    Responsabilidades
+                    Lugar de trabajo
                 </li>
             </a>
+            <div class="collapse" id="Lugar">
+                <div class="card card-body">
+                    Institut municipal de serveis interpersonals (IMSP)
+                </div>
+            </div>
+            <a data-bs-toggle="collapse" href="#Duracion" role="button" aria-expanded="false"
+                aria-controls="collapseExample">
+                <li class="list-group-item list-group-item-action">
+                    Duracion
+                </li>
+            </a>
+            <div class="collapse" id="Duracion">
+                <div class="card card-body">
+                    5/11/2019 - 27/03/2020
+                </div>
+            </div>
+
         </ul>
         <script>
             
