--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marcos Gorriaran</title>
-    <link rel="shortcut icon" href="Icon/MainIcon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Icon/phoenix-framework.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -15,14 +15,14 @@
     <link rel="stylesheet" href="Style/Main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="Script/Main.js"></script>
-    <script src="Script/StickyNavbar.js"></script>
+    <script src="Script/ReadJson.js"></script>
+    <script src="Script/BuildExpLab.js"></script>
 </head>
-
 <body class="justify-content-around">
     <header id="TopOfPage">
         <img src="Images/PhoenixBackground.png" class="img-fluid mx-auto d-block" alt="">
     </header>
-    <nav id="navbar_top" class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="navbar_top" class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,6 @@
         </div>
     </nav>
     <section id="Start">
-
         <h2>Introduccion</h2>
         <div class="container-fluid">
             <div class="row">
