Añadido una fuente de google fonts
He añadido una fuente de google fonts y aplicado a toda la pagina web.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 </a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#Experiencias">Experiencias laborales</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
@@ -67,7 +67,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="Experiencias">
         <h2>Experiencia laboral</h2>
         <h3>Practicas de trabajo SMX</h3>
         <ul class="list-group" id="SMX">
@@ -75,7 +75,7 @@
                 BuildExperiencia("Practicas de SMX", "SMX");
             </script>
         </ul>
-        
+
         <h3>Practicas de trabajo ASIX</h3>
         <ul class="list-group" id="ASIX">
             <script>
