--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="Script/Main.js"></script>
     <script src="Script/ReadJson.js"></script>
     <script src="Script/BuildExpLab.js"></script>
+    <script src="Script/BuildFormacion.js"></script>
 </head>
 
 <body class="justify-content-around">
@@ -43,7 +44,7 @@
                         <a class="nav-link" href="#Experiencias">Experiencias laborales</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#Formacion">Formaciones</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
@@ -82,7 +83,16 @@
                 BuildExperiencia("Practicas de ASIX", "ASIX");
             </script>
         </ul>
-        
+    </section>
+    <section id="Formacion">
+        <h2>Formaciones</h2>
+        <script>
+            PrpeareFormacionBuild("Formaciones","Formacion");
+            BuildFormacion("Formacion","Formaciones");
+        </script>
+    </section>
+    <section id="Idiomas">
+
     </section>
 </body>
 
