Progreso construccion de idiomas
Ya he empezado a trabajar en el script para montar la seccion de idiomas y ya tengo las imagenes y el diseño listo.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="Script/ReadJson.js"></script>
     <script src="Script/BuildExpLab.js"></script>
     <script src="Script/BuildFormacion.js"></script>
+    <script src="Script/BuildIdiomas.js"></script>
 </head>
 
 <body class="justify-content-around">
@@ -92,7 +93,23 @@
         </script>
     </section>
     <section id="Idiomas">
-
+        <h2>Idiomas</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 col-md-4">
+                    <img class="img-thumbnail" height="250" width="250" src="Images/Spanish.png" alt="Imagen no cargada o encontrada">
+                    <figcaption>Nativo</figcaption>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <img class="img-thumbnail" height="250" width="250" src="Images/Spanish.png" alt="Imagen no cargada o encontrada">
+                    <figcaption>Nativo</figcaption>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <img class="img-thumbnail" height="250" width="250" src="Images/Spanish.png" alt="Imagen no cargada o encontrada">
+                    <figcaption>Nativo</figcaption>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
