Documentacion del codigo
He documentado las diferentes funciones creadas en los scripts con comentarios detallando cual es su funcion como funciones.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h2>Cualidades</h2>
         <ul class="list-group list-group-flush" id="Cualidades">
             <script>
-                BuildCUalidades("Cualidades", "Cualidades");
+                BuildCualidades("Cualidades", "Cualidades");
             </script>
         </ul>
     </section>
