--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#Contacto">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Curriculum_V1_2.pdf" target="_blank">CV en PDF</a>
+                    </li>
                 </ul>
             </div>
         </div>
