--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="Script/BuildReferencias.js"></script>
     <script src="Script/Captcha.js"></script>
     <script src="Script/ContactForm.js"></script>
+    <script src="Script/Clock.js"></script>
 </head>
 
 <body class="justify-content-around">
@@ -65,6 +66,13 @@
                         <a class="nav-link" href="Curriculum_V1_2.pdf" target="_blank">CV en PDF</a>
                     </li>
                 </ul>
+                
+                <button>Change theme</button>
+                <p id="Clock" class="m-3">
+                    <script>
+                        clock();
+                    </script>
+                </p>
             </div>
         </div>
     </nav>
