Cambios esteticos y eliminacion de archivos innecesarios
He eliminado los archivos que no tenian funcion alguna y se habian vuelto obsoletos a este momento y he modificado algunos detalles de la pagina para que tenga un mejor aspecto.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="Style/Main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="Script/Main.js"></script>
     <script src="Script/ReadJson.js"></script>
     <script src="Script/BuildExpLab.js"></script>
     <script src="Script/BuildFormacion.js"></script>
@@ -190,7 +189,7 @@
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="GDPR">
-                <label class="form-check-label" for="GDPR">He leido el documento sobre la <a href="#">ley de proteccion
+                <label class="form-check-label" for="GDPR">He leido el documento sobre la <a href="GDPR.pdf" target="_blank">ley de proteccion
                         de datos</a></label><br>
                 <span id="WarnGDPR" class="text-danger"></span>
             </div>
