--- a/index.html
+++ b/index.html
@@ -46,9 +46,6 @@
                 </a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#Experiencias">Experiencias laborales</a>
                     </li>
                     <li class="nav-item">
@@ -62,6 +59,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Contacto">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Gallery.html">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Curriculum_V1_2.pdf" target="_blank">CV en PDF</a>
